[MOD,ADD] Config loading and using interfaces

--- a/UDM_Core.asmdef
+++ b/UDM_Core.asmdef
@@ -1,3 +1,17 @@
 {
-	"name": "UDM_Core"
+    "name": "UDM_Core",
+    "rootNamespace": "",
+    "references": [
+        "Unity.Addressables",
+        "Unity.ResourceManager"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
